<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@color/bg"
    android:gravity="center_horizontal"
    android:padding="16dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/calculate_your"
        android:textColor="@color/textBlue"
        android:textStyle="bold"
        android:textSize="24sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/age"
        android:textColor="@color/textBlue"
        android:textStyle="bold"
        android:textSize="30sp"
        android:background="@color/ageBg"
        android:padding="10dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/in_minutes"
        android:textColor="@color/textBlue"
        android:textStyle="bold"
        android:textSize="24sp" />
    <Button
        android:id="@+id/btnDatePicker"
        android:layout_marginTop="32dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_date"
        android:textSize="40sp"
        android:backgroundTint="@color/white"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/tvSelectedDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/selected_date"
        android:textColor="@color/textBlue"
        android:textStyle="bold"
        android:textSize="24sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selected_date_label"
        android:textColor="@color/textGrey"
        android:textStyle="bold"
        android:textSize="14sp" />
    <TextView
        android:id="@+id/tvMinutesSince"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/minutes_since"
        android:textColor="@color/textBlue"
        android:textStyle="bold"
        android:textSize="24sp" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minutes_since_label"
        android:textColor="@color/textGrey"
        android:textStyle="bold"
        android:textSize="14sp" />



</LinearLayout>